src/components/CalendarMenu/CalendarMenu.css
.CalendarMenu_container {
  cursor: pointer;
  border: 1px solid #0d3b62;
  border-radius: 15px;
  text-decoration: none;
  width: 320px;
  height: 65px;
  overflow: hidden;
  transition: all 0.4s ease-in-out;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-tap-highlight-color: transparent;
}

.CalendarMenu_container_open {
  height: 300px;
}

.CalendarMenu_container:hover {
  background-color: #f6f6f6;
}

.react-add-to-calendar {
  text-align: center;
  user-select: none;
  position: relative;
}

.react-add-to-calendar__wrapper {
  position: relative;
  margin-top: 10px;
  z-index: 2;
}

.CalendarMenu_container_open
  .react-add-to-calendar
  .react-add-to-calendar__wrapper
  .react-add-to-calendar__button
  span {
  padding-bottom: 0px;
}

.react-add-to-calendar__button span {
  padding: 30px 25px 15px;
  font-weight: 600;
}

.react-add-to-calendar__dropdown {
  position: absolute;
  z-index: 1;
  top: 14px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.react-add-to-calendar__dropdown ul {
  list-style-type: none;
  padding: 0;
}

.react-add-to-calendar__dropdown ul li {
  padding-bottom: 5px;
}

.react-add-to-calendar__dropdown ul li a {
  text-decoration: none;
  color: #0d3b62;
}

.react-add-to-calendar__dropdown ul li a:hover {
  color: rgb(17, 87, 148);
}

@media only screen and (max-width: 700px) {
  .CalendarMenu_container {
    width: 225px;
    height: 50px;
  }

  .CalendarMenu_container_open {
    height: 230px;
  }
}

